--- a/index.html
+++ b/index.html
@@ -1,48 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Order summary card</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/771fde4f00.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap" rel="stylesheet">
-  <style> @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap'); </style>
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap" rel="stylesheet">
-  <style> @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap'); </style>
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap" rel="stylesheet">
-  <style> @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap'); </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sign Up Form">
+    <meta name="keywords" content="Daily UI, Sign Up Form, Form">
+    <meta name="author" content="Sarthak Gupta">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- GoogleFonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+    </style>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/771fde4f00.js" crossorigin="anonymous"></script>
+    <!-- Title -->
+    <title>Sign Up | Sarthak Creation</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="card">
-    <img class="hero" src="images/illustration-hero.svg" alt="img">
-    <div class="container">
-      <h2 class="heading">Order Summary</h2>
-      <p class="description">
-        You can now listen to millions of songs, audiobooks, and podcasts on any 
-        device anywhere you like!
-      </p>
-    </div>
-    <div class="price">
-      <div class="priceinfo">
-        <img class="i" src="images/icon-music.svg" alt="icon">
-        <div>
-          <h3>Annual Plan</h3>
-          <p>$59.99/year</p>
+    <header>
+        <div class="brand">
+            <i class="fa-solid fa-palette fa-2xl pallet"></i>
+            <h2>Sarthak Creation</h2>
         </div>
-      </div>
-      <a href="#" class="change">Change</a>
-    </div>
-    <div class="buttons">
-      <button class="submit">Proceed to Payment</button>
-      <button class="cancel">Cancel Order</button>
-    </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.instagram.com/sarthak.code" target="_blank">Sarthak Gupta</a>.
-  </div>
+        <div class="link">
+            <i class="fa-solid fa-user fa-xl profile"></i>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About Me</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="form">
+        <h2 class="fh">Sign Up!</h2>
+        <form action="post">
+            <label for="fname" title="First Name">First Name</label>
+            <input type="text" name="fname" id="fname" placeholder="Enter Your First Name" required>
+            <label for="lname" title="Last Name">Last Name</label>
+            <input type="text" name="lname" id="lname" placeholder="Enter Your Last Name">
+            <label for="email" title="Email">Email</label>
+            <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
+            <label for="dob" title="Date Of Birth">Date Of Birth</label>
+            <input type="date" name="dob" id="dob" min="01-01-1920" max="01-01-2015" required>
+            <label for="pass" title="Password">Password</label>
+            <input type="password" name="pass" id="pass" minlength="8" maxlength="16" placeholder="Set Your Password (Minimum 8 characters)" required>
+            <fieldset>
+                <legend>Want to get latest notifications on email?</legend>
+                <label>
+                    <input type="radio" name="noti" value="yes" required>Yes
+                </label>
+                <label>
+                    <input type="radio" name="noti" value="no">No
+                </label>
+            </fieldset>
+            <button type="submit" class="subm">Sign Up !</button>
+        </form>
+    </section>
+    <footer>
+        <small>
+            <p>
+                Created By Sarthak gupta
+            </p>
+            <p>
+                Background image <a href="http://www.freepik.com">Designed by pikisuperstar / Freepik</a>
+            </p>
+        </small>
+    </footer>
 </body>
 </html>
